--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header>
         <h1>Happiness Tracker<br></h1>
     </header>
-    <p>this is going to track people's happiness</p>
 
     <h2> Login: </h2>
     <label for="username">Username: </label>
@@ -19,4 +18,10 @@
 
     <label for="password"><br>Password:  </label>
     <input type="text" id="username" name="username">
+    
+    <button class="my-button" onclick="alert('This is not implemented yet!')">Login</button>
+
+    <div> Made by Ben Christensen</div>
+    <a href="https://github.com/qbcubed3/startup">My Github</a>
+
   </body>
