Survey.html setup and beginning

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <header>
         <h1>Happiness Tracker<br></h1>
+        <ul>
+          <li><a href="survey.html"> Daily Survey! </a></li>
+        </ul>
+        <hr />
     </header>
 
     <h2> Login: </h2>
@@ -19,9 +23,11 @@
     <label for="password"><br>Password:  </label>
     <input type="text" id="username" name="username">
     
-    <button class="my-button" onclick="alert('This is not implemented yet!')">Login</button>
+    <button class="my-button" onclick="alert('This is not implemented yet!')"><br>Login</button>
+  </body>
 
+  <footer>
+    <hr />
     <div> Made by Ben Christensen</div>
     <a href="https://github.com/qbcubed3/startup">My Github</a>
-
-  </body>
+  </footer>
