--- a/homepage.html
+++ b/homepage.html
@@ -3,15 +3,14 @@
     <meta charset="UTF-8" />
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Survey</title>
+    <title>Home Page</title>
     <link rel="icon" href="icon.png" />
   </head>
 
   <body>
-    <h1> Happiness Tracker</h1>
+    <h1>Happiness Tracker</h1>
     <ul>
-        <li><a href="homepage.html">Home Page</a></li>
+        <li><a href="survey.html">Daily Survey! </a></li>
         <li><a href="index.html">Login</a></li>
     </ul>
-    <textarea></textarea>
   </body>
