--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8" />
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simon</title>
-    <link rel="icon" href="favicon.ico" />
+    <title>Login</title>
+    <link rel="icon" href="icon.png" />
   </head>
 
   <body>
@@ -12,6 +12,8 @@
         <h1>Happiness Tracker<br></h1>
         <ul>
           <li><a href="survey.html"> Daily Survey! </a></li>
+          <li><a href="homepage.html">Homepage</a></li>
+
         </ul>
         <hr />
     </header>
