About page updated and survey almost done

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <body>
     <header>
         <h1>Happiness Tracker<br></h1>
-        <ul>
-          <li><a href="survey.html"> Daily Survey! </a></li>
-          <li><a href="homepage.html">Homepage</a></li>
-
-        </ul>
+        <nav>
+          <ul>
+            <li><a href="survey.html"> Daily Survey! </a></li>
+            <li><a href="homepage.html">Homepage</a></li>
+            <li><a href="stats.html">View your Stats</a></li>
+          </ul>
+        </nav>
         <hr />
     </header>
 
@@ -24,8 +26,9 @@
 
     <label for="password"><br>Password:  </label>
     <input type="text" id="username" name="username">
-    
-    <button class="my-button" onclick="alert('This is not implemented yet!')"><br>Login</button>
+
+    <br>
+    <button class="my-button" onclick="alert('This is not implemented yet!')">Login</button>
   </body>
 
   <footer>
@@ -33,3 +36,5 @@
     <div> Made by Ben Christensen</div>
     <a href="https://github.com/qbcubed3/startup">My Github</a>
   </footer>
+
+</html>
