Finished survey page

--- a/survey.html
+++ b/survey.html
@@ -17,8 +17,9 @@
         </ul>
     </nav>
     <hr />
-    
-    <h2>What did you do today?</h2>
+
+    <h2>Survey</h2>
+    <h4>What did you do today?</h4>
     <form>
         <div>
             <input type="checkbox" id="Work" name="work" value="work" for="work">Work
@@ -36,6 +37,13 @@
             <button class="my-button" onclick="alert('This is not implemented yet!')">Add</button>
         </div>
     </form>
+
+    <h4>On a Scale of 1-10, How Happy were you Today?</h4>
+    <input type="range" name="happiness" min="1" max="10" step="1" value="5">
+    <output for="happiness" id="selectedHapiness">use scripting to update number</output>
+    <br><br>
+    <button class="my-button" onclick="alert('This is not implemented yet')">Submit Survey</button>
+
   </body>
 
   <footer>
