Added images to both the new tab and the footer. Added description for websocket and database useage

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="icon" href="icon.png" />
+    <link rel="icon" href="smiley.png" />
   </head>
 
   <body>
     <header>
-        <h1>Happiness Tracker<br></h1>
+      <div>
+        <h1>Happiness Tracker</h1>
+        <span>username</span>
+      </div>
         <nav>
           <ul>
             <li><a href="survey.html"> Daily Survey! </a></li>
@@ -22,10 +25,10 @@
 
     <h2> Login: </h2>
     <label for="username">Username: </label>
-    <input type="text" id="username" name="username">
+    <input type="text" id="username" name="username" placeholder="Text">
 
     <label for="password"><br>Password:  </label>
-    <input type="text" id="username" name="username">
+    <input type="text" id="username" name="username" placeHolder="Text">
 
     <br>
     <button class="my-button" onclick="alert('This is not implemented yet!')">Login</button>
@@ -35,6 +38,8 @@
     <hr />
     <div> Made by Ben Christensen</div>
     <a href="https://github.com/qbcubed3/startup">My Github</a>
+    <br>
+    <img src="smiley.png" alt="you when you use my website" width="75" height="75">
   </footer>
 
 </html>
