--- a/stats.html
+++ b/stats.html
@@ -4,11 +4,14 @@
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stats</title>
-    <link rel="icon" href="icon.png" />
+    <link rel="icon" href="smiley.png" />
   </head>
 
   <body>
-    <h1>Happiness Tracker</h1>
+    <div>
+        <h1>Happiness Tracker</h1>
+        <span>username</span>
+    </div>
     <nav>
         <ul>   
             <li><a href="homepage.html">Home Page</a></li>
@@ -16,12 +19,18 @@
             <li><a href="survey.html"> Daily Survey! </a></li>
         </ul>
     </nav>
+    <hr />
+    <h3>Statistics</h3>
+    <p>This has nothing inside of it yet but will be fully implemented using WebSocket realtime data and also using data from the database</p>
   </body>
+  
 
   <footer>
     <hr />
     <div> Made by Ben Christensen</div>
     <a href="https://github.com/qbcubed3/startup">My Github</a>
+    <br>
+    <img src="smiley.png" alt="you when you use my website" width="75" height="75">
   </footer>
 
 </html>
