--- a/homepage.html
+++ b/homepage.html
@@ -4,11 +4,14 @@
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link rel="icon" href="icon.png" />
+    <link rel="icon" href="smiley.png" />
   </head>
 
   <body>
-    <h1>Happiness Tracker</h1>
+    <div>
+        <h1>Happiness Tracker</h1>
+        <span>username</span>
+    </div>
     <nav>
         <ul>
             <li><a href="survey.html">Daily Survey! </a></li>
@@ -39,6 +42,8 @@
     <hr />
     <div> Made by Ben Christensen</div>
     <a href="https://github.com/qbcubed3/startup">My Github</a>
+    <br>
+    <img src="smiley.png" alt="you when you use my website" width="75" height="75">
   </footer>
 
 </html>
