--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="icon" href="smiley.png" />
+    <link rel="icon" href="smiley.png">
+    <link rel="stylesheet" href="main.css">
   </head>
 
   <body>
@@ -13,11 +14,11 @@
         <h1>Happiness Tracker</h1>
         <span>username</span>
       </div>
-        <nav>
+        <nav class="navigation">
           <ul>
-            <li><a href="survey.html"> Daily Survey! </a></li>
-            <li><a href="homepage.html">Homepage</a></li>
-            <li><a href="stats.html">View your Stats</a></li>
+            <li class="navpoints"><a href="survey.html"> Daily Survey! </a></li>
+            <li class="navpoints"><a href="homepage.html">Homepage</a></li>
+            <li class="navpoints"><a href="stats.html">View your Stats</a></li>
           </ul>
         </nav>
         <hr />
