--- a/stats.html
+++ b/stats.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stats</title>
     <link rel="icon" href="smiley.png" />
+    <link rel="stylesheet" href="main.css">
   </head>
 
   <body>
-    <div>
+    <div class="header">
+        <img src="smiley.png" width="50" height="50">
         <h1>Happiness Tracker</h1>
         <span>username</span>
     </div>
-    <nav>
+    <nav class="navigation">
         <ul>   
-            <li><a href="homepage.html">Home Page</a></li>
-            <li><a href="index.html">Login</a></li>
-            <li><a href="survey.html"> Daily Survey! </a></li>
+            <li class = "navpoints"><a href="homepage.html">Home Page</a></li>
+            <li class = "navpoints"><a href="index.html">Login</a></li>
+            <li class = "navpoints"><a href="survey.html"> Daily Survey! </a></li>
         </ul>
     </nav>
     <hr />
