--- a/homepage.html
+++ b/homepage.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
     <link rel="icon" href="smiley.png" />
+    <link rel="stylesheet" href="main.css">
   </head>
 
   <body>
-    <div>
-        <h1>Happiness Tracker</h1>
-        <span>username</span>
+    <div class="header">
+      <img src="smiley.png" width="50" height="50">
+      <h1>Happiness Tracker</h1>
+      <span>username</span>
     </div>
-    <nav>
+    <nav class = "navigation">
         <ul>
-            <li><a href="survey.html">Daily Survey! </a></li>
-            <li><a href="index.html">Login</a></li>
-            <li><a href="stats.html">View your Stats</a></li>
+            <li class="navpoints"><a href="survey.html">Daily Survey! </a></li>
+            <li class="navpoints"><a href="index.html">Login</a></li>
+            <li class="navpoints"><a href="stats.html">View your Stats</a></li>
         </ul>
     </nav>
     <hr />
