--- a/index.html
+++ b/index.html
@@ -15,25 +15,28 @@
         <h1>Happiness Tracker</h1>
         <span>username</span>
       </div>
-        <nav class="navigation">
-          <ul class="navlist">
-            <li class="navpoints"><a href="survey.html"> Daily Survey! </a></li>
-            <li class="navpoints"><a href="homepage.html">Homepage</a></li>
-            <li class="navpoints"><a href="stats.html">View your Stats</a></li>
-          </ul>
-        </nav>
-        <hr />
     </header>
+    
     <main>
-      <h2> Login: </h2>
-      <label for="username">Username: </label>
-      <input type="text" id="username" name="username" placeholder="Text">
+      <nav class="navigation">
+        <ul class="navlist">
+          <li><a href="index.html">Login</a></li>
+          <li><a href="survey.html"> Daily Survey! </a></li>
+          <li><a href="homepage.html">Homepage</a></li>
+          <li><a href="stats.html">View your Stats</a></li>
+        </ul>
+      </nav>
+      <div>
+        <h2> Login: </h2>
+        <label for="username">Username: </label>
+        <input type="text" id="username" name="username" placeholder="Text">
 
-      <label for="password"><br>Password:  </label>
-      <input type="text" id="username" name="username" placeHolder="Text">
+        <label for="password"><br>Password:  </label>
+        <input type="text" id="username" name="username" placeHolder="Text">
 
-      <br>
-      <button class="my-button" onclick="alert('This is not implemented yet!')">Login</button>
+        <br>
+        <button class="my-button" onclick="alert('This is not implemented yet!')">Login</button>
+      </div>
     </main>
 
     <footer>
