--- a/stats.html
+++ b/stats.html
@@ -15,10 +15,11 @@
         <span>username</span>
     </div>
     <nav class="navigation">
-        <ul>   
-            <li class = "navpoints"><a href="homepage.html">Home Page</a></li>
-            <li class = "navpoints"><a href="index.html">Login</a></li>
-            <li class = "navpoints"><a href="survey.html"> Daily Survey! </a></li>
+        <ul class="navlist">   
+          <li><a href="index.html">Login</a></li>
+          <li><a href="survey.html"> Daily Survey! </a></li>
+          <li><a href="homepage.html">Homepage</a></li>
+          <li><a href="stats.html">View your Stats</a></li>
         </ul>
     </nav>
     <hr />
