--- a/stats.html
+++ b/stats.html
@@ -9,22 +9,26 @@
   </head>
 
   <body>
-    <div class="header">
-        <img src="smiley.png" width="50" height="50">
-        <h1>Happiness Tracker</h1>
-        <span>username</span>
-    </div>
-    <nav class="navigation">
+    <header>
+      <div class="header">
+          <img src="smiley.png" width="50" height="50">
+          <h1>Happiness Tracker</h1>
+          <span>username</span>
+      </div>
+    </header>
+
+    <main>
+      <nav class="navigation">
         <ul class="navlist">   
           <li><a href="index.html">Login</a></li>
           <li><a href="survey.html"> Daily Survey! </a></li>
           <li><a href="homepage.html">Homepage</a></li>
           <li><a href="stats.html">View your Stats</a></li>
         </ul>
-    </nav>
-    <hr />
-    <h3>Statistics</h3>
-    <p>This has nothing inside of it yet but will be fully implemented using WebSocket realtime data and also using data from the database</p>
+      </nav>
+      <h3>Statistics</h3>
+      <p>This has nothing inside of it yet but will be fully implemented using WebSocket realtime data and also using data from the database</p>
+    </main>
   </body>
   
 
