stats.css added

--- a/stats.html
+++ b/stats.html
@@ -6,6 +6,7 @@
     <title>Stats</title>
     <link rel="icon" href="smiley.png" />
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="stats.css">
   </head>
 
   <body>
@@ -26,8 +27,10 @@
           <li><a href="stats.html">View your Stats</a></li>
         </ul>
       </nav>
-      <h3>Statistics</h3>
-      <p>This has nothing inside of it yet but will be fully implemented using WebSocket realtime data and also using data from the database</p>
+      <div class="stats">
+        <h2>Statistics</h2>
+        <p>This has nothing inside of it yet but will be fully implemented using WebSocket realtime data and also using data from the database</p>
+      </div>
     </main>
   </body>
   
