finished main.css

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
           <li><a href="stats.html">View your Stats</a></li>
         </ul>
       </nav>
-      <div>
+      <div class="login">
         <h2> Login: </h2>
         <label for="username">Username: </label>
         <input type="text" id="username" name="username" placeholder="Text">
 
-        <label for="password"><br>Password:  </label>
+        <label for="password"><br>Password:&nbsp;</label>
         <input type="text" id="username" name="username" placeHolder="Text">
 
         <br>
