--- a/survey.html
+++ b/survey.html
@@ -37,10 +37,14 @@
             <input type="text" id="newItem" placeholder="Add a New Activity">
             <button class="my-button" id="addNew">Add</button>
         </div>
+        <div>
+          <input type="text" id="deleteItem" placeholder="Delete Activity">
+          <button class="my-button" id="remove">Delete</button>
+        </div>
         <form class="ranges">
           <h4>On a Scale of 1-10, How Happy were you Today?</h4>
-          <input type="range" name="happiness" min="1" max="10" step="1" value="5">
-          <output for="happiness" id="selectedHapiness">use scripting to update number</output>
+          <input type="range" id = "happinessRange" name="happiness" min="1" max="10" step="1" value="5">
+          <output id="selectedHappiness">5x`</output>
           <br><br>
           <button class="my-button" onclick="alert('This is not implemented yet')">Submit Survey</button>
 
