--- a/survey.html
+++ b/survey.html
@@ -41,15 +41,15 @@
           <input type="text" id="deleteItem" placeholder="Delete Activity">
           <button class="my-button" id="remove">Delete</button>
         </div>
-        <form class="ranges">
+        <div class="ranges">
           <h4>On a Scale of 1-10, How Happy were you Today?</h4>
           <input type="range" id = "happinessRange" name="happiness" min="1" max="10" step="1" value="5">
-          <output id="selectedHappiness">5x`</output>
+          <output id="selectedHappiness">5</output>
           <br><br>
-          <button class="my-button" onclick="alert('This is not implemented yet')">Submit Survey</button>
+          <button class="my-button" id="submit">Submit Survey</button>
 
-          <p>The data from here will be saved into a database</p>
-        </form>
+          <p></p>
+        </div>
       </div>
     </main>
   </body>
