--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="icon" href="smiley.png">
     <link rel="stylesheet" href="main.css">
+    <script src="index.js" defer></script>
   </head>
 
   <body>
@@ -32,10 +33,10 @@
         <input type="text" id="username" name="username" placeholder="Text">
 
         <label for="password"><br>Password:&nbsp;</label>
-        <input type="text" id="username" name="username" placeHolder="Text">
+        <input type="text" id="password" name="password" placeHolder="Text">
 
         <br>
-        <button class="my-button" onclick="alert('This is not implemented yet!')">Login</button>
+        <button class="my-button" id="login">Login</button>
       </div>
     </main>
 
