--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="main.css">
     <script src="index.js" defer></script>
   </head>
-
+  <div class="popup-container">
+    <div class="popup">
+      <p>Your survey is ready!</p>
+      <button class="close" id="close">Close</button>
+    </div>
+  </div>
   <body>
     <header>
       <div class="header">
