--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="icon" href="smiley.png">
     <link rel="stylesheet" href="main.css">
     <script src="index.js" defer></script>
+    <script src="popup.js" defer></script>
   </head>
-  <div class="popup-container">
-    <div class="popup">
-      <p>Your survey is ready!</p>
-      <button class="close" id="close">Close</button>
-    </div>
-  </div>
   <body>
+    <div class="popup-container" id="popup-container">
+      <div class="popup">
+        <p>Your survey is ready!</p>
+        <button class="close" id="close">Close</button>
+        <button class="goSurvey" id="goSurvey">Survey</button>
+      </div>
+    </div>
     <header>
       <div class="header">
         <img src="smiley.png" width="50" height="50">
