--- a/survey.html
+++ b/survey.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="survey.css">
     <script src="survey.js" defer></script>
+    <script src="popup.js" defer></script>
   </head>
 
   <body>
+    <div class="popup-container" id="popup-container">
+      <div class="popup">
+        <p>Your survey is ready!</p>
+        <button class="close" id="close">Close</button>
+        <button class="goSurvey" id="goSurvey">Survey</button>
+      </div>
+    </div>
     <header>
       <div class="header">
         <img src="smiley.png" width="50" height="50">
