partway through stats.js

--- a/stats.html
+++ b/stats.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="stats.css">
     <script src="popup.js" defer></script>
+    <script src="stats.js" defer></script>
   </head>
 
   <body>
