--- a/stats.html
+++ b/stats.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="stats.css">
     <script src="popup.js" defer></script>
     <script src="stats.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
 
   <body>
@@ -38,7 +39,7 @@
       </nav>
       <div class="stats">
         <h2>Statistics</h2>
-        <p>This has nothing inside of it yet but will be fully implemented using WebSocket realtime data and also using data from the database</p>
+        <canvas id="barGraph" width="400" height="400"></canvas>
       </div>
     </main>
   </body>
