--- a/stats.html
+++ b/stats.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="stats.css">
     <script src="popup.js" defer></script>
     <script src="stats.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
   </head>
 
   <body>
@@ -39,7 +39,7 @@
       </nav>
       <div class="stats">
         <h2>Statistics</h2>
-        <canvas id="barGraph" width="400" height="400"></canvas>
+        <canvas id="barGraph" width="400" height="200"></canvas>
       </div>
     </main>
   </body>
