--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
       <a href="https://github.com/qbcubed3/startup">My Github</a>
       <br>
       <img src="smiley.png" alt="you when you use my website" width="75" height="75">
+      <figcaption id="joke"></figcaption>
     </footer>
   </body>
 
