--- a/public/stats.html
+++ b/public/stats.html
@@ -50,6 +50,7 @@
     <a href="https://github.com/qbcubed3/startup">My Github</a>
     <br>
     <img src="smiley.png" alt="you when you use my website" width="75" height="75">
+    <figcaption class="joke"></figcaption>
   </footer>
 
 </html>
