joke endpoint added

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="homepage.css">
     <script src="popup.js" defer></script>
+    <script src="homepage.js" defer></script>
   </head>
 
   <body>
@@ -60,6 +61,9 @@
     <a href="https://github.com/qbcubed3/startup">My Github</a>
     <br>
     <img src="smiley.png" alt="you when you use my website" width="75" height="75">
+    <hr>
+    <p id="setup"></p>
+    <p id="punchline"></p>
   </footer>
 
 </html>
