--- a/public/survey.html
+++ b/public/survey.html
@@ -67,5 +67,8 @@
     <a href="https://github.com/qbcubed3/startup">My Github</a>
     <br>
     <img src="smiley.png" alt="you when you use my website" width="75" height="75">
+    <hr>
+    <p id="setup"></p>
+    <p id="punchline"></p>
   </footer>
 </html>
