--- a/public/stats.html
+++ b/public/stats.html
@@ -24,7 +24,7 @@
       <div class="header">
           <img src="smiley.png" width="50" height="50">
           <h1>Happiness Tracker</h1>
-          <span>username</span>
+          <button id="logout">Logout</button>
       </div>
     </header>
 
