--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Login</title>
     <link rel="icon" href="smiley.png">
     <link rel="stylesheet" href="main.css">
-    <script src="index.js" defer></script>
+    <script src="main.js" defer></script>
     <script src="popup.js" defer></script>
   </head>
   <body>
@@ -43,7 +43,7 @@
         <input type="text" id="password" name="password" placeHolder="Text">
 
         <br>
-        <button class="my-button" id="login">Login</button>
+        <button class="my-button" id="login">Login/Register</button>
       </div>
     </main>
 
