--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
 
         <br>
         <button class="my-button" id="login">Login/Register</button>
+        <p id="error"></p>
       </div>
     </main>
 
