--- a/public/survey.html
+++ b/public/survey.html
@@ -55,10 +55,19 @@
           <output id="selectedHappiness">5</output>
           <br><br>
           <button class="my-button" id="submit">Submit Survey</button>
-
-          <p></p>
         </div>
       </div>
+      <body>
+        <div class="chat-container">
+            <h3>Chat</h3>
+            <div class="chat-output" id="chat-output">
+              
+            </div>
+            <input type="text" id="message-input" placeholder="Say something positive!">
+            <button onclick="sendMessage()">Send</button>
+            <p id="logged in"> </p>
+        </div>
+    </body>
     </main>
   </body>
 
